--- a/style.css
+++ b/style.css
@@ -7,9 +7,14 @@
 
 /* hiding cv template */
 
+/* *{
+    color: white;
+} */
+
 #cv-template{
     display: none;
 }
+
 
 /* hiding print botton */
 
@@ -29,13 +34,100 @@
 
 .background{
     background-color: cornflowerblue;
+    border-radius: 30px;
 
 }
 
-.bcl{
-    background-image: url("https://i.pinimg.com/originals/48/07/6c/48076cc56b8ddd63ed9db2bc1e2c4d64.jpg");
+
+
+button{
+    background:#f9004d ;
+    color: white;
+    text-decoration: none;
+    border: 1px solid transparent;
+    font-weight: bold;
+    padding: 5px 15px;
+    border-radius:20px;
+    transition: .2s;
 }
-.pratik{
-    background-image: url("https://img.freepik.com/premium-vector/abstract-smooth-pastel-gradient-color-effect-background-website-poster-graphic-design_120819-733.jpg?w=2000");
+button:hover{
+    background: transparent;
+    border: 2px solid #f9004d;
+    cursor: pointer;
 }
 
+
+.header{
+    padding: 18px;
+    padding-right: 1px;
+}
+
+
+
+
+
+.banner{
+    width: 100%;
+    /* height: 100vh; */
+    background-image:linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(https://previews.123rf.com/images/annaleni/annaleni1612/annaleni161200095/67657101-dark-programming-line-seamless-pattern-illustration-of-outline-tile-background-coding-resources-.jpg);
+    /* background-repeat:repeat; */
+    background-size: cover;
+    background-position: center;
+}
+
+.logo{
+    width: 120px;
+    cursor: pointer;
+}
+
+.navbar{
+    width: 85%;
+    margin: auto;
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar ul li{
+list-style: none;
+display: inline-block;
+margin: 0 40px;
+position: relative;
+
+}
+.navbar ul li a{
+text-decoration: none;
+color: thistle;
+text-transform: uppercase;
+}
+.navbar ul li::after{
+content: '';
+height: 3px;
+width: 0;
+background: #f9004d;
+position: absolute;
+left: 0;
+bottom: -4px;
+transition: 0.5s;
+}
+.navbar ul li:hover::after{
+width: 100%;
+
+}
+
+.pir{
+    color: thistle;
+    
+}
+
+.form{
+    margin: 0 25% 0 25%;
+    color: white;
+}
+.profinfo{
+    margin-top: 4%;
+    border: solid 1px white;
+}
+.persinfo{
+    border: solid 1px white;
+}
