pre final commit

--- a/aboutme.css
+++ b/aboutme.css
@@ -132,6 +132,7 @@ button{
 button:hover{
     background: transparent;
     border: 2px solid #f9004d;
-    cursor: pointer
-    ;
+    cursor: pointer;
 }
+
+
